--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "swiper": "^11.2.6"
   }
 }
